--- a/fourgym/index.html
+++ b/fourgym/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Four Gym</title>
+    <script src="https://kit.fontawesome.com/cbff97fc6c.js" crossorigin="anonymous"></script>
+    <title>Your Gym</title> 
   </head>
   <body>
     <div id="root"></div>
